--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Videogame API</title>
+    <title>Aulab Gamer Hub</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -12,30 +12,6 @@
     />
 
     <!-- //? CDN Google Fonts -->
-
-    <!-- Saira -->
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Saira:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-      rel="stylesheet"
-    /> -->
-
-    <!-- Cinzel -->
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500;600;700;800;900&display=swap"
-      rel="stylesheet"
-    /> -->
-
-    <!-- Nova Square -->
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Nova+Square&display=swap"
-      rel="stylesheet"
-    /> -->
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -51,7 +27,7 @@
     />
 
     <!-- //? Website icon -->
-    <link rel="shortcut icon" href="/img/Logo Tab - Color.png" />
+    <link rel="shortcut icon" href="/src/assets/favicon.png" />
   </head>
 
   <body class="bg-dark">
@@ -64,13 +40,13 @@
       crossorigin="anonymous"
     ></script>
 
-    <!-- CDN Fontawesome -->
+    <!-- //? CDN Fontawesome -->
     <script
       src="https://kit.fontawesome.com/cc498b00a6.js"
       crossorigin="anonymous"
     ></script>
 
-    <!-- JS Swiper -->
+    <!-- //? JS Swiper -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
   </body>
 </html>
